--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,7 @@
 sistemamoney.seguranca.enable-https=true
+
+sistemamoney.origem-permitida=https://sistemamaney-anjular.herokuapp.com
+
+spring.datasource.url= {JDBC_DATABASE_URL}
+spring.datasource.username={JDBC_DATABASE_USERNAME}
+spring.datasource.password={JDBC_DATABASE_PASSWORD}
