--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.jpa.database=POSTGRESQL
-spring.datasource.url= jdbc:postgresql://localhost:5432/marinhadb?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=postgres
+spring.jpa.database=MYSQL
+spring.datasource.url= jdbc:mysql://localhost:3306/marinhadb?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=root
 spring.datasource.password=jota1980
 
 spring.jpa.show-sql=true
