--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 
 spring.jackson.date-format= yyyy-MM-dd
 
+spring.profiles.active=oauth-security
+
+
 
 
 
